--- a/_includes/html/footer.html
+++ b/_includes/html/footer.html
@@ -30,11 +30,7 @@
         </div>
         <div class="open footer-section">
             <div>
-                <strong>Montag und Donnerstag</strong>
-                <br>8:30-18:30
-            </div>
-            <div>
-                <br><strong>Dienstag, Mittwoch und Freitag</strong>
+                <strong>Montag bis Freitag</strong>
                 <br>8:30-18:00
             </div>
             <div>
