--- a/_includes/html/footer.html
+++ b/_includes/html/footer.html
@@ -30,7 +30,11 @@
         </div>
         <div class="open footer-section">
             <div>
-                <strong>Montag bis Freitag</strong>
+                <strong>Montag und Donnerstag</strong>
+                <br>8:30-18:30
+            </div>
+            <div>
+                <strong>Dienstag, Mittwoch und Freitag</strong>
                 <br>8:30-18:00
             </div>
             <div>
